<resources>
    <string name="app_name">齐大校园</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toutiao_key">a1a755458cc22f129942b34904feb820</string>
    <string name="my_toutiao_key">58f262616de26fed992ccc27df286647</string>

    <string name="network_fail_toast_text">网络故障，请检查网络连接</string>
    <string name="network_fail_refresh">刷新</string>

    <string name="school_tel">联系电话：0452－2738190</string>
    <string name="school_contacts">联系人：薛仁政</string>
    <string name="school_email">学校邮箱：qdzsb_7175@sina.com</string>
    <string name="school_official_website">学校官网：http://www.qqhru.edu.cn</string>
    <string name="school_graduate_student_website">研究生院网址：http://yjs.qqhru.edu.cn/</string>
    <string name="school_organization_code">单位代码：10221</string>
    <string name="school_postal_code">邮政编码：161006</string>
    <string name="school_address">学校地址：黑龙江省齐齐哈尔市文化大街30号</string>

    <string name="me_email">邮箱：2804547073@qq.com</string>
    <string name="me_contacts">联系人：一位不愿透露姓名的同学</string>

    <string name="seat_reservation_title">自习室预约座位操作说明及入口</string>
    <string name="seat_reservation_text">\n
        1.手机WiFi连接齐齐哈尔大学校园网，微信扫描下方二维码登录。\n
        2.用户名及初始密码，学生为学号，教工为卡号，登录后可自行修改密码。\n
        3.预约成功后直接在图书馆大厅电脑刷“一卡通”完成进馆签到。\n
        4.预约当日座位必须在预约后30分钟内到馆签到；每天13:00开放第二日座位预约，预约成功后必须于第二日早8:00前到馆签到。\n
        5.预约成功正常使用座位的读者，中午13:00至14:30之间需重新刷卡签到，否则座位自动释放。\n
        6.离开不超过1小时，需刷卡点击“暂离”，返回时需刷卡确认；离开超过1小时，需刷卡点击“离馆”。\n
        7.预约、暂离、离馆未刷卡的记违约1次，账户锁定1天，锁定的账户将于第二日13:00前自动解锁。\n
        8.每天21:00后离馆可不必刷卡，系统不记违约。
    </string>
    <string name="seat_reservation_image_url">https://mmbiz.qpic.cn/sz_mmbiz_png/FdIxoZ0xGPFibkk6tk9wnjqLbzbCiarG5p73uqTc5vtOr0amFib6siaam3n0q3XAY3libxnsnVI2wr93y9bLfGicrySg/640?wx_fmt=png&amp;tp=webp&amp;wxfrom=5&amp;wx_lazy=1&amp;wx_co=1</string>
    <string name="seat_reservation_tip">长按下方二维码保存图片</string>

    <string name="campus_network_new">新生办理校园网入口</string>
    <string name="campus_network_old">老生办理校园网入口</string>
    <string name="campus_network_tip">办理校园网操作指南</string>

    <string name="recruitment_double_choose">双选会讯息</string>
    <string name="recruitment_preach">宣讲会讯息</string>
    <string name="recruitment_bottom_tip">更多就业信息请关注齐大就业指导公众号</string>
    
    <string name="feedback_top_hint">您的评价</string>
    <string name="feedback_advice_hint">您想对我们说的话</string>

    <string name="register_get_verify_code">%d秒后重新获取</string>

    <string name="please_login">请先登陆</string>
</resources>