<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_title_bar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/ll_about_school"
        android:src="@drawable/university_logo" />

    <!--联系我们（学校）-->
    <LinearLayout
        android:id="@+id/ll_about_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_above="@id/ll_about_me"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="【联系我们】"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:text="@string/school_tel"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:text="@string/school_contacts"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:text="@string/school_email"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:text="@string/school_official_website"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:text="@string/school_graduate_student_website"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:text="@string/school_organization_code"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:text="@string/school_postal_code"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:text="@string/school_address"
            android:textColor="@color/black"
            android:textSize="12sp"/>

    </LinearLayout>

    <!--联系开发者-->
    <LinearLayout
        android:id="@+id/ll_about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="【联系开发者】"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:text="@string/me_email"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:longClickable="true"
            android:text="@string/me_contacts"
            android:textColor="@color/black"
            android:textSize="12sp"/>

    </LinearLayout>

</RelativeLayout>